[gd_scene load_steps=8 format=2]

[ext_resource path="res://Sprites/UI/healthbarRed.png" type="Texture" id=1]
[ext_resource path="res://Sprites/UI/heart.png" type="Texture" id=2]
[ext_resource path="res://Sprites/UI/healthbarEmpty.png" type="Texture" id=3]
[ext_resource path="res://Sprites/UI/window_statisticsml.png" type="Texture" id=4]
[ext_resource path="res://Sprites/UI/journalpage - empty.png" type="Texture" id=5]
[ext_resource path="res://Sprites/UI/journalpage- full.png" type="Texture" id=6]
[ext_resource path="res://Scenes/UI/Main.gd" type="Script" id=7]

[node name="Main" type="Node2D"]
script = ExtResource( 7 )

[node name="HUD" type="CanvasLayer" parent="."]

[node name="HealthProgress" type="TextureProgress" parent="HUD"]
modulate = Color( 0.34902, 0.290196, 0.290196, 1 )
margin_left = 39.0
margin_top = 330.0
margin_right = 373.0
margin_bottom = 358.0
value = 80.0
texture_under = ExtResource( 3 )
texture_progress = ExtResource( 1 )

[node name="Heart" type="TextureRect" parent="HUD"]
modulate = Color( 0.34902, 0.290196, 0.290196, 1 )
margin_left = 3.0
margin_top = 327.0
margin_right = 39.0
margin_bottom = 358.0
texture = ExtResource( 2 )

[node name="ScoreCard" type="TextureRect" parent="HUD"]
self_modulate = Color( 0.466667, 0.443137, 0.443137, 1 )
margin_left = 508.0
margin_top = 283.0
margin_right = 636.0
margin_bottom = 356.0
texture = ExtResource( 4 )

[node name="Enemies" type="Label" parent="HUD/ScoreCard"]
margin_left = 7.0
margin_top = 17.0
margin_right = 75.0
margin_bottom = 31.0
text = "POINTS:"

[node name="PageProgress" type="TextureProgress" parent="HUD/ScoreCard"]
margin_left = 27.0
margin_top = 34.0
margin_right = 97.0
margin_bottom = 57.0
max_value = 3.0
value = 1.0
texture_under = ExtResource( 5 )
texture_progress = ExtResource( 6 )

[node name="Score" type="Label" parent="HUD/ScoreCard"]
margin_left = 91.0
margin_top = 17.0
margin_right = 107.0
margin_bottom = 31.0
text = "0"

[connection signal="value_changed" from="HUD/HealthProgress" to="." method="_on_HealthProgress_value_changed"]
[connection signal="value_changed" from="HUD/ScoreCard/PageProgress" to="." method="_on_PageProgress_value_changed"]
